tests/fail/nonexistent_struct.stderr
error: Cannot inject fields from 'NonexistentStruct' as this type does not exist
 --> tests/fail/nonexistent_struct.rs:3:1
  |
3 | #[inject_fields(NonexistentStruct)]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `inject_fields` (in Nightly builds, run with -Z macro-backtrace for more info)
